fix selectTag alignment

--- a/src/components/TagsList/tagsList.module.css
+++ b/src/components/TagsList/tagsList.module.css
@@ -1,17 +1,11 @@
-.container {
-  display: flex;
-  gap: 8px;
-  margin-bottom: 12px;
-}
-
-.ul {
-  display: flex;
-  gap: 8px;
+.list {
   margin: 0;
   padding: 0;
 }
 
-.li {
+.listItem {
   list-style: none;
-  margin: 0 !important;
+  margin: 0;
+  padding: 0;
+  accent-color: var(--ifm-color-primary);
 }
